# GotchiValleyFirstEdition

./: .gitignore  CMakeLists.txt  CMakePresets.json
GotchiValley/: AnimationSystem.h  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  ComponentManager.h  ComponentRegistry.h  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  GameWorld.cpp  GameWorld.h  GotchiValley.cpp  GotchiValley.h  IObserver.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SharedObjects.cpp  SharedObjects.h  UISystem.cpp  UISystem.h
GotchiValley/Entities/: Behaviour.h  CMakeLists.txt  Creature.cpp  Creature.h  Entity.cpp  Entity.h  Interfaces.h  Level.cpp  Level.h  Player.cpp  Player.h
GotchiValley/Game/: Animations.cpp  Animations.h  BehaviourScripts.cpp  BehaviourScripts.h  CMakeLists.txt  Factory.h  GameWorld.cpp  GameWorld.h  GotchiValley.cpp  GotchiValley.h  LevelManager.cpp  LevelManager.h
GotchiValley/Globals/: CMakeLists.txt  Components.h  GlobalVariables.cpp  GlobalVariables.h  IObserver.h  SharedObjects.h
GotchiValley/Managers/: CMakeLists.txt  ComponentManager.h  ComponentRegistry.h  EntityManager.cpp  LevelManager.cpp  LevelManager.h
GotchiValley/Systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  Pathfinder.cpp  Pathfinder.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  UISystem.cpp  UISystem.h
resources/: CMakeLists.txt
